Naprawione ścieżki zapisu nagrania po wygenerowaniu go